1999-12-08  Federico Mena Quintero  <federico@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-drawable.c: Fix includes.
	(gdk_pixbuf_get_from_drawable): Implemented the zillion sanity
	checks and API definition.  The body needs filling in and it needs
	to do the Right Thing(tm) for pixmaps plus the given colormap and
	windows and their own colormaps.

	* gdk-pixbuf/gdk-pixbuf.h: Added prototype for
	gdk_pixbuf_get_from_drawable().  Killed gdk-pixbuf-drawable.h.

	* gdk-pixbuf/Makefile.am: Re-added the gdk-pixbuf-drawable sources.

	* doc/tmpl/from-drawables.sgml: Populated.

	* doc/gdk-pixbuf.sgml: Added the from-drawables section.

	* doc/Makefile.am (tmpl_sources): Added tmpl/from-drawables.sgml.

	* doc/gdk-pixbuf-sections.txt: Added a section for getting pixbufs
	from drawables.

1999-12-07  Federico Mena Quintero  <federico@redhat.com>

	* doc/tmpl/gnome-canvas-pixbuf.sgml: Added clarification about
	reference counting for GdkPixbuf structures.

1999-12-07  Martin Baulig  <martin@home-of-linux.org>

	* gdk-pixbuf/Makefile.am (testpixbuf_LDADD): Conditionally
	include $(GNOME_LIBS) here.

1999-12-05  Arjan van de Ven <arjan@fenrus.demon.nl>

	Added missing "include <string.h>" to:
	* gdk-pixbuf/io-ras.c
	* gdk-pixbuf/io-bmp.c
	* gdk-pixbuf/io-ico.c

1999-12-06  Federico Mena Quintero  <federico@redhat.com>

	* gdk-pixbuf/gdk-pixbuf-io.c (file_formats): Patch from Arjan to
	fix an initializer.

1999-12-05  Federico Mena Quintero  <federico@redhat.com>

	* gdk-pixbuf/Makefile.am (testpixbuf_LDADD): Add back
	$(GNOME_LIBS).  This must compile outside of gnome-libs.  If you
	want, send me a patch to do the conditional stuff properly.
	Otherwise, please read the GNOME Programming Guidelines,
	especially the "CVS policies" section.

1999-12-05  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gdk-pixbuf/Makefile.am: removed GNOME_LIBS from testpixbuf_LDADD.

1999-12-05  Arjan van de Ven <arjan@fenrus.demon.nl>

	* gdk-pixbuf/io-ico.c: Bug in palet-size
	calculation fixed
